Fixed overflow x bug

--- a/src/app/components/about-me/about-me.component.scss
+++ b/src/app/components/about-me/about-me.component.scss
@@ -25,7 +25,7 @@
 
         &.show{
             filter: blur(0);
-            transform: translateY(0);
+            transform: translateX(0);
             opacity: 1;
         }
 
