--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -176,7 +176,6 @@
 
     //500px
     .contact {
-        width: 100%;
 
         .container {
 
